--- a/web/css/index.css
+++ b/web/css/index.css
@@ -2,6 +2,26 @@ html, body {
     width: 100%;
 }
 
+.signinpopup {
+    display: none;
+    position: fixed;
+    top: 0px;
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
+    background-color: rgb(40, 40, 40);
+    opacity: 0.4;
+}
+
+.signincontainer {
+    position: absolute;
+    width: 250px;
+    height: 100px;
+    top: calc(50% - 50px);
+    left: calc(50% - 125px);
+    background-color: rgb(245, 250, 255);
+}
+
 .topbar {
     position: relative;
     display: inline-block;
