--- a/web/css/index.css
+++ b/web/css/index.css
@@ -86,8 +86,22 @@ html, body {
     position: relative;
     display: inline-block;
     width: 100%;
-    height: auto;
+    height: 500px;
     background-color: rgb(43, 0, 255);
 
     padding-top: 150px;
+}
+
+.livecodelogs-container {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 500px;
+}
+
+.livecode {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 500px;
 }
