--- a/web/css/index.css
+++ b/web/css/index.css
@@ -1,5 +1,6 @@
 html, body {
     width: 100%;
+    height: 100%;
 }
 
 .signinpopup {
@@ -40,7 +41,7 @@ html, body {
     position: relative;
     display: inline-block;
     width: 100%;
-    height: auto;
+    min-height: calc(80% - 70px);
     background-color: rgb(40, 40, 40);
 }
 
@@ -52,7 +53,6 @@ html, body {
     padding-left: 25px;
     padding-right: 25px;
     height: auto;
-    min-height: 400px;
 }
 
 .header-container .mascot {
@@ -86,22 +86,24 @@ html, body {
     position: relative;
     display: inline-block;
     width: 100%;
-    height: 500px;
+    text-align: center;
+    min-height: 650px;
     background-color: rgb(43, 0, 255);
 
     padding-top: 150px;
+    box-sizing: border-box;
 }
 
 .livecodelogs-container {
     position: relative;
     display: inline-block;
-    width: 100%;
-    height: 500px;
+    width: 70%;
+    min-height: 350px;
 }
 
 .livecode {
     position: relative;
     display: inline-block;
     width: 100%;
-    height: 500px;
+    height: 100%;
 }
