--- a/web/css/index.css
+++ b/web/css/index.css
@@ -32,6 +32,7 @@ html, body {
     background-color: rgb(40, 40, 40);
     padding-left: 25px;
     padding-right: 25px;
+    box-sizing: border-box;
 }
 
 .topbar .brand {
@@ -90,20 +91,20 @@ html, body {
     min-height: 650px;
     background-color: rgb(43, 0, 255);
 
-    padding-top: 150px;
+    padding-top: 10%;
     box-sizing: border-box;
 }
 
 .livecodelogs-container {
     position: relative;
     display: inline-block;
-    width: 70%;
-    min-height: 350px;
+    text-align: center;
+    width: 100%;
 }
 
 .livecode {
     position: relative;
     display: inline-block;
-    width: 100%;
-    height: 100%;
+    width: 70%;
+    min-height: 350px;
 }
