--- a/web/css/index.css
+++ b/web/css/index.css
@@ -54,6 +54,7 @@ html, body {
     padding-left: 25px;
     padding-right: 25px;
     height: auto;
+    box-sizing: border-box;
 }
 
 .header-container .mascot {
@@ -62,11 +63,6 @@ html, body {
     bottom: -250px;
     width: 300px;
     height: 300px;
-}
-
-.header-container .mascot {
-    width: 100%;
-    height: 100%;
 }
 
 .header-container .header {
