--- a/web/css/index.css
+++ b/web/css/index.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     width: 100%;
     height: 100%;
 }
@@ -36,13 +37,14 @@ html, body {
 }
 
 .topbar .brand {
+    color: white;
+    font-size: 24px;
 }
 
 .section1 {
     position: relative;
     display: inline-block;
     width: 100%;
-    min-height: calc(80% - 70px);
 
     background: linear-gradient(to bottom, rgb(40, 40, 40), rgb(40, 40, 40) 80%, rgb(43, 0, 255) 80%);
 }
@@ -71,6 +73,26 @@ html, body {
     text-align: center;
 }
 
+.header-container .header h1 {
+    color: white;
+    font-size: 32px;
+    font-weight: bold;
+}
+
+.header-container .header2 {
+    background: #121FCF;
+    background: -webkit-linear-gradient(to right, #121FCF 0%, #FFFFFF 100%);
+    background: -moz-linear-gradient(to right, #121FCF 0%, #FFFFFF 100%);
+    background: linear-gradient(to right, #121FCF 0%, #FFFFFF 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.header-container .header h2 {
+    color: white;
+    font-size: 24px;
+}
+
 .question-padder {
     position: relative;
     display: inline-block;
@@ -79,6 +101,7 @@ html, body {
     padding-right: 25px;
     width: 100%;
     box-sizing: border-box;
+    min-height: calc(70vh - 70px);
 }
 
 .section2 {
@@ -89,7 +112,6 @@ html, body {
     min-height: 650px;
     background-color: rgb(43, 0, 255);
 
-    padding-top: 10%;
     box-sizing: border-box;
 }
 
@@ -113,6 +135,7 @@ html, body {
     top: 0px;
     bottom: 0px;
     width: 30%;
+    overflow: auto;
 }
 
 .code {
@@ -121,4 +144,44 @@ html, body {
     min-height: 350px;
     height: calc(70vh);
     float: right;
+}
+
+#hierarchy {
+    font-family: FontAwesome;
+    width: 300px;
+}
+
+.foldercontainer,
+.file,
+.noitems {
+    display: block;
+    padding: 5px 5px 5px 50px;
+}
+
+.folder {
+    color: red;
+}
+
+.file {
+    color: green;
+}
+
+.folder,
+.file {
+    cursor: pointer;
+}
+
+.noitems {
+    display: none;
+    pointer-events: none;
+}
+
+.folder:hover,
+.file:hover {
+    background: yellow;
+}
+
+.folder:before,
+.file:before {
+    padding-right: 10px;
 }
