--- a/web/css/index.css
+++ b/web/css/index.css
@@ -17,7 +17,7 @@ body {
 
 .signinpopup .veil {
     background-color: black;
-    opacity: 0.4;
+    opacity: 0.9;
     position: absolute;
     z-index: 1;
     top: 0px;
@@ -30,13 +30,87 @@ body {
     position: absolute;
     width: 250px;
     height: 100px;
-    top: calc(50% - 50px);
-    left: calc(50% - 125px);
+    top: calc(50% - 100px);
+    left: calc(50% - 175px);
     background-color: rgb(245, 250, 255);
     z-index: 2;
     padding: 50px;
-    box-sizing: border-box;
     text-align: center;
+}
+
+.signincontainer input {
+    margin-bottom: 35px;
+
+    background: 0;
+    border: 0;
+    outline: none;
+    width: 80vw;
+    max-width: 400px;
+    font-size: 1.5em;
+    transition: padding 0.3s 0.2s ease;
+}
+
+.signincontainer input:focus {
+    padding-bottom: 5px;
+}
+
+.signincontainer input:focus+.line:after {
+    transform: scaleX(1);
+}
+
+.field {
+    position: relative;
+}
+
+.field .line {
+    width: 100%;
+    height: 3px;
+    position: absolute;
+    bottom: -8px;
+    background: #bdc3c7;
+}
+
+.field .line:after {
+    content: " ";
+    position: absolute;
+    float: right;
+    width: 100%;
+    height: 3px;
+    transform: scalex(0);
+    transition: transform 0.3s ease;
+    background: #1abc9c;
+}
+
+.signincontainer button {
+    align-items: center;
+    background-color: #fff;
+    border-radius: 12px;
+    box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, .1) 0 6px 20px;
+    box-sizing: border-box;
+    color: #121212;
+    cursor: pointer;
+    display: inline-flex;
+    flex: 1 1 auto;
+    font-family: Inter, sans-serif;
+    font-size: 1.2rem;
+    font-weight: 700;
+    justify-content: center;
+    line-height: 1;
+    margin: 0;
+    outline: none;
+    padding: 1rem 1.2rem;
+    text-align: center;
+    text-decoration: none;
+    transition: box-shadow .2s, -webkit-box-shadow .2s;
+    white-space: nowrap;
+    border: 0;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.signincontainer button:hover {
+    box-shadow: #121212 0 0 0 3px, transparent 0 0 0 0;
 }
 
 .topbar {
