--- a/web/css/index.css
+++ b/web/css/index.css
@@ -159,9 +159,9 @@ button:hover {
 @media (max-width: 880px) {
     .header-container .mascot {
         position: absolute;
-        width: 150px;
-        top: -80px;
-        right: 0px;
+        left: 15px;
+        bottom: 0px;
+        width: 90px;
     }
 }
 
